unpackaged/main/default/objects/blng__UsageSummary__c/blng__UsageSummary__c.object-meta.xml
<CustomObject>
    <label>Usage Summary</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Usage Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>