unpackaged/main/default/objects/blng__UsageSummary__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Billing Date is calculate ad Usage Summary End Date + 1 day</description>
    <formula>blng__SummaryEndDate__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>