unpackaged/main/default/objects/blng__UsageSummary__c/fields/PF_UsageGenerated__c.field-meta.xml
<CustomField>
    <fullName>PF_UsageGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will verify if the usages are created or not</description>
    <label>UsageGenerated</label>
    <type>Checkbox</type>
</CustomField>