unpackaged/main/default/objects/blng__UsageSummary__c/fields/USReportFilter__c.field-meta.xml
<CustomField>
    <fullName>USReportFilter__c</fullName>
    <formula>AND
(OR
( AND( MONTH(  blng__SummaryStartDate__c ) &lt;= MONTH(TODAY())+1,YEAR(blng__SummaryStartDate__c) = YEAR (TODAY()) ),
YEAR(blng__SummaryStartDate__c) &lt; YEAR (TODAY())
),NOT(ISPICKVAL(blng__Status__c,&quot;Processed&quot;)) ,NOT(ISPICKVAL(blng__Status__c,&quot;Cancelled&quot;))
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>USReportFilter</label>
    <type>Checkbox</type>
</CustomField>